Fix some of the code for password visibility. Fix admin manage layout in mobile

--- a/views/styles/create-account.css
+++ b/views/styles/create-account.css
@@ -92,6 +92,15 @@
   grid-column: 2 / span 1;
 }
 
+.password-container {
+  position: relative;
+}
+
+.password-container .visible-password-toggle {
+  position: absolute;
+  right: 0;
+}
+
 #create-submit {
   grid-row: 3 / span 1;
   grid-column: 1 / span 2;
